<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

  <TextView
      android:id="@+id/entry_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/encode_instructions" />

  <EditText
      android:id="@+id/entry_edit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/entry_label"
      android:layout_marginTop="@dimen/default_margin"
      android:inputType="numberSigned"
      android:imeOptions="actionGo"/>

  <Button
      android:id="@+id/process_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/entry_edit"
      android:layout_marginTop="@dimen/default_margin"
      android:text="@string/main_encode"/>

  <TextView
      android:id="@+id/result_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/process_btn"
      android:layout_marginTop="@dimen/default_margin"
      android:text="@string/main_result" />

  <TextView
      android:id="@+id/result_txt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/result_label"
      android:layout_marginTop="@dimen/default_margin"
      android:textAppearance="?android:textAppearanceMedium"
      tools:text="abcd" />

</RelativeLayout>