<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

  <TextView
      android:id="@+id/entry_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/decode_instructions" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/default_margin"
      android:baselineAligned="false"
      android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

      <TextView
          android:id="@+id/hi_byte_label"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/decode_hi_byte_label"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/hi_byte_prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decode_byte_prefix"/>

        <EditText
            android:id="@+id/hi_byte_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:maxLength="2"
            android:inputType="textCapCharacters|textNoSuggestions|textVisiblePassword"
            android:imeOptions="actionNext"/>

      </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginLeft="@dimen/default_margin"
        android:orientation="vertical">

      <TextView
          android:id="@+id/lo_byte_label"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/decode_hi_byte_label"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/lo_byte_prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decode_byte_prefix"/>

        <EditText
            android:id="@+id/lo_byte_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:maxLength="2"
            android:inputType="textCapCharacters|textNoSuggestions|textVisiblePassword"
            android:imeOptions="actionNext"/>

      </LinearLayout>

    </LinearLayout>

  </LinearLayout>

  <Button
      android:id="@+id/process_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/default_margin"
      android:text="@string/main_decode"/>

  <TextView
      android:id="@+id/result_label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/default_margin"
      android:text="@string/main_result" />

  <TextView
      android:id="@+id/result_txt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/default_margin"
      android:textAppearance="?android:textAppearanceMedium"
      tools:text="1234" />

</LinearLayout>